--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hooks": "^1.0.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "stripe": "^12.5.0"
   }
 }
